--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/image": "^1.7.0",
+    "@nuxt/kit": "^3.12.2",
     "@nuxtjs/device": "^3.1.1",
+    "@pinia/nuxt": "^0.5.1",
+    "lenis": "^1.1.3",
     "nuxt": "^3.12.2",
     "nuxt-icons": "^3.2.1",
+    "pinia": "^2.1.7",
     "scss": "^0.2.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
