--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/device": "^3.1.1",
     "@pinia/nuxt": "^0.5.1",
     "lenis": "^1.1.3",
+    "nodemailer": "^6.9.14",
     "nuxt": "^3.12.2",
     "nuxt-icons": "^3.2.1",
     "pinia": "^2.1.7",
