--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/kit": "^3.12.2",
     "@nuxtjs/device": "^3.1.1",
     "@pinia/nuxt": "^0.5.1",
+    "gsap": "^3.12.5",
     "lenis": "^1.1.3",
     "nodemailer": "^6.9.14",
     "nuxt": "^3.12.2",
