--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt-icons": "^3.2.1",
     "pinia": "^2.1.7",
     "scss": "^0.2.4",
+    "swiper": "^11.1.5",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
