--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "swiper": "^11.1.5",
     "v-mask": "^2.3.0",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "sass": "^1.77.6"
