--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nuxt/kit": "^3.12.2",
     "@nuxtjs/device": "^3.1.1",
     "@pinia/nuxt": "^0.5.1",
+    "@vueform/nuxt": "^1.7.0",
+    "@vueform/vueform": "^1.10.3",
     "gsap": "^3.12.5",
     "lenis": "^1.1.3",
     "node-telegram-bot-api": "^0.66.0",
@@ -21,13 +23,15 @@
     "nuxt": "^3.12.2",
     "nuxt-icons": "^3.2.1",
     "pinia": "^2.1.7",
+    "primevue": "^4.0.4",
     "scss": "^0.2.4",
     "swiper": "^11.1.5",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3",
-    "vue-the-mask": "^0.11.1"
+    "vue-input-facade": "^2.2.0",
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@primevue/nuxt-module": "^4.0.4",
     "sass": "^1.77.6"
   }
 }
