--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "primevue": "^4.0.4",
     "scss": "^0.2.4",
     "swiper": "^11.1.5",
+    "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
     "vue-input-facade": "^2.2.0",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@primevue/nuxt-module": "^4.0.4",
